--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ button {
   cursor: pointer;
 }
 
-
 ul {
   list-style-type: none;
 }
@@ -44,10 +43,11 @@ a {
 }
 
 html {
+  --color-cloud: #f4f4fd;
+  --color-violet: #4d5ae5;
   --card-shadow: 0px 1px 1px 0px rgb(46, 47, 66, 0.08),
-  0px 2px 1px 0px rgb(46, 47, 66, 0.08);
+    0px 2px 1px 0px rgb(46, 47, 66, 0.08);
   --hover-transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 body {
@@ -68,6 +68,8 @@ body {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -112,18 +114,18 @@ body {
 
 .nav-link.active {
   position: relative;
+  color: #404bbf;
 }
 
 .nav-link.active::after {
   content: '';
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   display: block;
   width: 100%;
   height: 4px;
   border-radius: 2px;
   background-color: #404bbf;
-  transform: translateY(1px);
 }
 
 .nav-link:hover,
@@ -156,6 +158,8 @@ body {
 }
 
 .hero {
+  margin-inline: auto;
+  max-width: 1440px;
   padding: 188px 0;
   color: #ffffff;
   background-image: linear-gradient(
@@ -165,7 +169,7 @@ body {
     url('../images/hero-background.jpg');
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain;
+  background-size: cover;
 }
 
 .page-title {
@@ -271,7 +275,8 @@ body {
 .person {
   border-radius: 0 0 4px 4px;
   background-color: #ffffff;
-  box-shadow: var(--card-shadow)
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .person-photo {
@@ -279,7 +284,7 @@ body {
 }
 
 .person-data {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .person-name,
@@ -293,27 +298,34 @@ body {
 
 .person-icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 24px;
 }
 
-.person-icon-wrapper {
+.person-icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.person-icon-link {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  background-color: #4d5ae5;
-  transition: background-color var(--hover-transition)
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-violet);
+  transition: background-color var(--hover-transition);
 }
 
-.person:hover .person-icon-wrapper {
-  background-color: #404BBF;
+.person-icon-link:hover,
+.person-icon-link:focus {
+  background-color: #404bbf;
 }
 
 .person-icon {
   width: 16px;
-  fill: #fff;
+  fill: var(--color-cloud);
 }
 
 .portfolio-items {
@@ -329,7 +341,8 @@ body {
 }
 
 .portfolio-item:hover {
-  box-shadow: var(--card-shadow);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-img {
@@ -353,9 +366,9 @@ body {
   width: 100%;
   height: 100%;
   padding: 40px 32px;
-  color: #F4F4FD;
-  background-color: #4D5AE5;
-  transition: top var(--hover-transition)
+  color: var(--color-cloud);
+  background-color: var(--color-violet);
+  transition: top var(--hover-transition);
 }
 
 .portfolio-item:hover .portfolio-img-overlay {
@@ -369,10 +382,11 @@ body {
 
 .footer .container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
 .footer-webstudio {
+  margin-right: 120px;
   width: 264px;
 }
 
@@ -402,25 +416,31 @@ body {
 
 .footer-icons {
   display: flex;
-  justify-content: space-between;
+  gap: 16px;;
 }
 
-.footer-icon-wrapper {
+.footer-icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-icon-link {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-violet);
   transition: background-color var(--hover-transition);
 }
 
-.footer-icon-wrapper:hover {
-  background-color: #31D0AA;
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
 }
 
 .footer-icon {
   width: 24px;
-  fill: #F4F4FD;
+  fill: var(--color-cloud);
 }
