--- a/css/styles.css
+++ b/css/styles.css
@@ -362,17 +362,18 @@ body {
 
 .portfolio-img-overlay {
   position: absolute;
-  top: 100%;
+  top: 0;
   width: 100%;
   height: 100%;
   padding: 40px 32px;
   color: var(--color-cloud);
   background-color: var(--color-violet);
-  transition: top var(--hover-transition);
+  transform: translateY(100%);
+  transition: transform var(--hover-transition);
 }
 
 .portfolio-item:hover .portfolio-img-overlay {
-  top: 0;
+  transform: translateY(0);
 }
 
 .footer {
